[MODORDERS-969] - Opening and editing POs with location-restricted funds (#805)
* [MODORDERS-969] - Opening and editing POs with location-restricted funds