@@ -1,24 +1,31 @@
 package org.folio.service.orders.flows.update.open;
 
-import static java.util.stream.Collectors.toList;
 import static org.folio.orders.utils.validators.LocationsAndPiecesConsistencyValidator.verifyLocationsAndPiecesConsistency;
 import static org.folio.rest.jaxrs.model.CompositePurchaseOrder.WorkflowStatus.PENDING;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.folio.okapi.common.GenericCompositeFuture;
 import org.folio.orders.utils.FundDistributionUtils;
+import org.folio.rest.acq.model.finance.Fund;
+import org.folio.rest.core.exceptions.ErrorCodes;
 import org.folio.rest.core.exceptions.HttpException;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.jaxrs.model.CompositePoLine;
 import org.folio.rest.jaxrs.model.CompositePurchaseOrder;
 import org.folio.rest.jaxrs.model.Error;
+import org.folio.rest.jaxrs.model.FundDistribution;
+import org.folio.rest.jaxrs.model.Location;
+import org.folio.rest.jaxrs.model.Parameter;
 import org.folio.rest.jaxrs.model.PieceCollection;
+import org.folio.service.finance.FundService;
 import org.folio.service.finance.expenceclass.ExpenseClassValidationService;
 import org.folio.service.finance.transaction.EncumbranceWorkflowStrategyFactory;
 import org.folio.service.orders.CompositePoLineValidationService;
@@ -30,14 +37,18 @@ import io.vertx.core.Future;
 public class OpenCompositeOrderFlowValidator {
   private static final Logger logger = LogManager.getLogger(OpenCompositeOrderFlowValidator.class);
 
+  private final FundService fundService;
   private final ExpenseClassValidationService expenseClassValidationService;
   private final PieceStorageService pieceStorageService;
   private final EncumbranceWorkflowStrategyFactory encumbranceWorkflowStrategyFactory;
   private final CompositePoLineValidationService compositePoLineValidationService;
 
-  public OpenCompositeOrderFlowValidator(ExpenseClassValidationService expenseClassValidationService,
-    PieceStorageService pieceStorageService, EncumbranceWorkflowStrategyFactory encumbranceWorkflowStrategyFactory,
-    CompositePoLineValidationService compositePoLineValidationService) {
+  public OpenCompositeOrderFlowValidator(FundService fundService,
+                                         ExpenseClassValidationService expenseClassValidationService,
+                                         PieceStorageService pieceStorageService,
+                                         EncumbranceWorkflowStrategyFactory encumbranceWorkflowStrategyFactory,
+                                         CompositePoLineValidationService compositePoLineValidationService) {
+    this.fundService = fundService;
     this.expenseClassValidationService = expenseClassValidationService;
     this.pieceStorageService = pieceStorageService;
     this.encumbranceWorkflowStrategyFactory = encumbranceWorkflowStrategyFactory;
@@ -45,7 +56,7 @@ public class OpenCompositeOrderFlowValidator {
   }
 
   public Future<Void> validate(CompositePurchaseOrder compPO, CompositePurchaseOrder poFromStorage,
-                                          RequestContext requestContext) {
+                               RequestContext requestContext) {
     List<Future<Void>> futures = new ArrayList<>();
 
     Future<Void> validateMaterialTypesFuture = Future.succeededFuture()
@@ -83,7 +94,7 @@ public class OpenCompositeOrderFlowValidator {
     List<CompositePoLine> linesWithIdWithoutManualPieceReceived = poLines.stream().filter(
         compositePoLine -> StringUtils.isNotEmpty(compositePoLine.getId()) && Boolean.FALSE.equals(compositePoLine.getCheckinItems()))
       .collect(Collectors.toList());
-    List<String> lineIds = linesWithIdWithoutManualPieceReceived.stream().map(CompositePoLine::getId).collect(toList());
+    List<String> lineIds = linesWithIdWithoutManualPieceReceived.stream().map(CompositePoLine::getId).toList();
     return pieceStorageService.getPiecesByLineIdsByChunks(lineIds, requestContext)
       .map(pieces -> new PieceCollection().withPieces(pieces).withTotalRecords(pieces.size()))
       .map(pieces -> {
@@ -92,7 +103,7 @@ public class OpenCompositeOrderFlowValidator {
       });
   }
 
-  private void validateMaterialTypes(CompositePurchaseOrder purchaseOrder){
+  private void validateMaterialTypes(CompositePurchaseOrder purchaseOrder) {
     if (purchaseOrder.getWorkflowStatus() != PENDING) {
       List<Error> errors = compositePoLineValidationService.checkMaterialsAvailability(purchaseOrder.getCompositePoLines());
       if (!errors.isEmpty()) {
@@ -100,4 +111,42 @@ public class OpenCompositeOrderFlowValidator {
       }
     }
   }
+
+  public Future<Void> checkFundLocationRestrictions(List<CompositePoLine> poLines, RequestContext requestContext) {
+    logger.debug("checkFundLocationRestrictions start");
+    List<Future<Void>> checkFunds = poLines
+      .stream()
+      .filter(poLine -> CollectionUtils.isNotEmpty(poLine.getLocations()))
+      .filter(poLine -> CollectionUtils.isNotEmpty(poLine.getFundDistribution()))
+      .map(poLine -> {
+        List<String> fundIdList = poLine.getFundDistribution().stream()
+          .map(FundDistribution::getFundId)
+          .toList();
+        return fundService.getFunds(fundIdList, requestContext)
+          .compose(funds -> validateLocationRestrictions(poLine, funds));
+      }).toList();
+    return GenericCompositeFuture.join(checkFunds).mapEmpty();
+  }
+
+  private Future<Void> validateLocationRestrictions(CompositePoLine poLine, List<Fund> funds) {
+    List<String> polLocationIds = poLine.getLocations().stream().map(Location::getLocationId).toList();
+    for (Fund fund : funds) {
+      if (Boolean.TRUE.equals(fund.getRestrictByLocations()) && CollectionUtils.containsAny(fund.getLocationIds(), polLocationIds)) {
+        String poLineId = poLine.getId();
+        String fundId = fund.getId();
+        Collection<String> restrictedLocations = CollectionUtils.intersection(fund.getLocationIds(), polLocationIds);
+        logger.error("For POL {} fund {} is restricted to be used for locations {}", poLineId, fundId, restrictedLocations);
+        List<Parameter> parameters = List.of(
+          new Parameter().withKey("poLineId").withValue(poLineId),
+          new Parameter().withKey("poLineNumber").withValue(poLine.getPoLineNumber()),
+          new Parameter().withKey("fundId").withValue(fundId),
+          new Parameter().withKey("fundCode").withValue(fund.getCode()),
+          new Parameter().withKey("restrictedLocations").withValue(restrictedLocations.toString())
+        );
+        return Future.failedFuture(new HttpException(422, ErrorCodes.FUND_LOCATION_RESTRICTION_VIOLATION, parameters));
+      }
+    }
+    return Future.succeededFuture();
+  }
+
 }
